# asmopt

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md  run_tests.sh  verify_functionality.sh
_codeql_build_dir/: CMakeCache.txt  Makefile  asmopt  cmake_install.cmake
asmopt/: __init__.py  __main__.py  cli.py  core.py
include/: asmopt.h
src/: asmopt.c  main.c
tests/: README.md  test_comprehensive.c  test_constants.h  test_integration.c  test_peephole.c
